--- a/style/_settings.scss
+++ b/style/_settings.scss
@@ -38,7 +38,8 @@ textarea,
 textarea::placeholder,
 input,
 input::placeholder,
-button {
+button
+ {
       text-decoration: none;
       color: inherit;
       font: inherit;
