--- a/style/style.scss
+++ b/style/style.scss
@@ -3,8 +3,9 @@
 @use "./mixins";
 
 
-@use "../src/components/header/header";
-@use "buttons";
+@use "./header/header.scss";
+@use "./buttons";
+@use "./modal";
 // @use "bars-windows.scss";
 // @use 'animation/animation.scss';
 
@@ -22,7 +23,10 @@ body {
 
 }
 
-
+.app-container.inactive {
+      filter: blur(5px);
+      pointer-events: none;
+}
 
 
 
